[package]
name = "inverted-index"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
json = "0.12.4"                      # JSON implementation in Rust
serde = "1.0.136"                       # A generic serialization/deserialization framework
word_iter = "0.2.1"    # Simple Iterator over all words in a string
